basic shared_malloc is added

--- a/memcached-1.4.24_RDMA/Makefile.am
+++ b/memcached-1.4.24_RDMA/Makefile.am
@@ -18,6 +18,7 @@ memcached_SOURCES = memcached.c memcached.h \
                     thread.c daemon.c \
                     stats.c stats.h \
                     util.c util.h \
+		    sharedmalloc.c sharedmalloc.h \
                     trace.h cache.h sasl_defs.h
 
 if BUILD_CACHE
