--- a/memcached_benchmark/memcached_client/Makefile
+++ b/memcached_benchmark/memcached_client/Makefile
@@ -1,5 +1,5 @@
 all: *.c *.h
-	gcc -O3 *.c -Wall -levent  -pthread -lm -D_GNU_SOURCE -o loader
+	gcc -O0 -g  -Wall -pthread -D_GNU_SOURCE  *.c -lm -levent -o loader
 
 clean:
 	rm loader
