Changing the failover mechanism - much more memory is allocated in the beginning, but it's more stable. Adding 'select' before read.

--- a/memcached_benchmark/memcached_client/Makefile
+++ b/memcached_benchmark/memcached_client/Makefile
@@ -1,5 +1,5 @@
 all: *.c *.h
-	gcc -O0 -g  -Wall -pthread -D_GNU_SOURCE  *.c -lm -levent -o loader
+	gcc -O0 -g  -Wall -pthread -D_GNU_SOURCE  *.c -lm -L/usr/local/lib -levent -levent_pthreads -o loader
 
 clean:
 	rm loader
